2015-12-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yoshirin.el (shimbun-yoshirin-x-face-alist): Add a face.

2015-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-clear-contents): Remove;
	merge to shimbun-multi-clear-contents.
	(shimbun-multi-clear-contents): Improve regexp to search img tag;
	add author's info and subtitle if any.

2015-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-nikkangendai-get-headers-top)
	(shimbun-nikkangendai-get-headers, shimbun-multi-next-url)
	(shimbun-clear-contents): Rewrite following the site renewal.

2015-11-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-clear-contents): Fix image gathering.

2015-11-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-clear-contents):
	Don't exclude article head.

2015-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kyoko-np.el: Disable expiration and enable hankaku by default.
	(shimbun-clear-contents): Remove App store info.

2015-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el: New file, a successor of sb-gendai-net.el.
	* sb-gendai-net.el: Remove.

2015-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kyoko-np.el (shimbun-headers): Say "Checking new news...".

2015-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kyoko-np.el: New file.

2015-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yoshirin.el (shimbun-yoshirin-get-thumnail):
	No need to use shimbun-replace-in-string; always expose alt text.
	(shimbun-yoshirin-make-contents): Don't insert thumnail if the same one
	exists already in the article body.

2015-09-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yoshirin.el: New file.

2015-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-get-headers)
	(shimbun-sankei-get-headers-top-1): Protect against timestamp typo.

2015-02-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-article-contents):
	Respect shimbun-japanese-hankaku.
